correct not spacing

--- a/src/Note/index.scss
+++ b/src/Note/index.scss
@@ -21,9 +21,9 @@ zn-note > div, :host > div {
     flex-direction: column;
     overflow: hidden;
     flex-wrap: nowrap;
-    padding-top: wc.spacing(md);
-    padding-bottom: wc.spacing(md);
-    gap: wc.spacing(md);
+    padding-top: wc.spacing(lg);
+    padding-bottom: wc.spacing(lg);
+    gap: wc.spacing(xs);
   }
 }
 
@@ -34,6 +34,7 @@ zn-note, :host {
 
     .caption {
       font-weight: 600;
+      font-size: 16px;
       color: rgb(var(--zn-text-heading));
     }
 
@@ -45,7 +46,7 @@ zn-note, :host {
   .body {
     display: flex;
     flex-direction: column;
-    gap: wc.spacing(md);
+    gap: wc.spacing(sm);
     max-width: wc.container-width(md);
   }
 }
